apps/hermes-agent/components/api/patch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes-agent
spec:
  ports:
    - name: http
      port: 8642
      targetPort: http
