apps/hermes-agent/components/api/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hermes-agent
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: honcho
              app.kubernetes.io/name: honcho
      ports:
        - port: http
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: hermes-agent
      app.kubernetes.io/name: hermes-agent
  policyTypes:
    - Ingress
